Version 1.7.6.5 * call to xiFDR adapted to newer jdk versions (tested on jdk 17) * modification specificity: expnaded the terminal names accepted      * [nc]term      * prot[nc]term      * protein[nc]term      * pep[nc]term      * peptide[nc]term      * dashes are in the name are ignored * ignore some subscores not correctly incorporated into match score